CM-61 -- Added more to the CM reconciliation job, which required adding exists() methods to the CM API.
git-svn-id: https://source.sakaiproject.org/svn/course-management/trunk@15123 66ffb92e-73f9-0310-93c1-f5514f145a0a